# Brico

./: README.md
Backend/: Cargo.toml
Backend/src/: main.rs  utils.rs
Backend/src/auth/: jwt.rs  login.rs  signup.rs
Backend/src/login_signup/: login.rs
Backend/src/middleware/: jwt_varify.rs  mod.rs
Brico/: index.html  package-lock.json  package.json
Brico/src/: App.css  App.jsx  App.tsx  Home.jsx  Home.tsx  home.module.css  main.tsx
Brico/src-tauri/icons/: icon.icns
Brico/src/auth/: auth.jsx  auth.module.css  signup.jsx  signup.module.css
Brico/src/components/: CopyButton.tsx  Fotter.jsx  Haeder.css  Header.jsx  Header.tsx  Sidbar.jsx  fotter.css  sidebar.css
Brico/src/components/css/: header.module.css
Brico/src/other/: Feedback.jsx  feedback.css  profile.jsx
Brico/src/tools/: BricksCalculation.jsx  CeilingCalculation.jsx  MarbleCalculation.jsx  PaintCalculation.jsx  SlabCalculation.jsx  TileCalculation.jsx  Tools.tsx  cementPlasterCalculation.jsx
Brico/src/tools/css/: tools.module.css
Brico/src/tools/css files/: bricks.css  plaster.css  slab.css
Brico/src/tools/tools/: Block.tsx  Bricks.tsx  Marble.tsx  Paint.tsx  Plaster.tsx  Slab.tsx  Tile.tsx
Brico/src/tools/tools/css/: bricks.module.css  slab.module.css
backend/: .gitignore  Cargo.toml
backend/sql/: brico.sql
backend/src/: lib.rs  main.rs
backend/src/auth/: jwt_tokken_genrate.rs  login.rs  mod.rs  signup.rs
backend/src/middleware/: json_tokken_varify.rs  mod.rs
sql/: users.sql
