[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
actix-service = "2.0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"  # Optional, for .env file support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
env_logger = "0.10"
log = "0.4"
bcrypt = "0.17.0"
chrono = "0.4.40"
