[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
tokio-postgres = "0.7.13"
validator = {version ="0.20.0",features = ["derive"]}
bcrypt = "0.17.0"   
local-ip-address = "0.6.1"
tower-http = { version = "0.5.0", features = ["cors"] }